# LogPress

./: .gitignore  CMakeLists.txt  Makefile  README.md  clustering.py  compressor.cpp  compressor.hpp  decompressor.cpp  decompressor.hpp  docker-compose.yml  logpress  main.cpp  searcher.cpp  searcher.hpp  sqlite_helper.cpp  sqlite_helper.hpp
Documents/: ADS - Midterm Review.pptx  Final presentation.pptx
chunk_reciever/: Dockerfile  chunk_reciever.go
chunk_sender/: Dockerfile  chunk_sender.go  go.mod  settings.json
dbserver/: Dockerfile  dbserver.go  go.mod
test/: compression.dict  convertvariablestodict.py  test.tcdb  test.tcdb.meta.db  test_compressor  test_compressor.cpp  test_decompressor  test_decompressor.cpp  test_searcher  test_searcher.cpp
